--- a/Details.html
+++ b/Details.html
@@ -136,25 +136,10 @@
                     </div>
                 </a>
                 <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
-                    <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
+                    <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns" id="manu_ui">
                         <li class="nav-item dropdown">
                             <a class="nav-link link-600 fw-medium" href="index.html" role="button">Home</a>
                         </li>
-
-                        <li class="nav-item dropdown">
-                            <a class="nav-link link-600 fw-medium" href="index.html?user=user1" role="button">User1</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link link-600 fw-medium" href="index.html?user=user2" role="button">User2</a>
-                        </li>
-						<li class="nav-item dropdown">
-                            <a class="nav-link link-600 fw-medium" href="index.html?user=user3" role="button">User3</a>
-                        </li>
-						<li class="nav-item dropdown">
-                            <a class="nav-link link-600 fw-medium" href="index.html?user=user4" role="button">User4</a>
-                        </li>
-
-
                     </ul>
                 </div>
 
@@ -379,10 +364,6 @@
                     </div>
                 </div>
 
-
-
-
-
                 <footer class="footer">
                     <div class="row g-0 justify-content-between fs--1 mt-4 mb-3">
                         <div class="col-12 col-sm-auto text-center">
@@ -426,7 +407,7 @@
     <script src="http://rtwelfare.club/js/Layout.js?v=rKEWKuYUoOgMuMCwbsEw04hmb2Rs0myJWrVLBWt-k8A"></script>
     <script type="text/javascript" src="http://rtwelfare.club/plugins/cal-heatmap/d3.v3.js"></script>
     <script type="text/javascript" src="http://rtwelfare.club/plugins/cal-heatmap/cal-heatmap.js"></script>
-    <script src="js/GoogleChart.js"></script>
+    <script src="http://rtwelfare.club/js/St_web_GoogleChart.js"></script>
     <script>
         (function ($) {
             function PNLDashboard() {
@@ -585,7 +566,7 @@
 
                 function LoadeChatFirstTime() {
                     var aliash = getUrlVars();
-
+                    bindPNLManu();
                     bindEquityChart('month',aliash);
                     bindEquityBothChart('month',aliash);
                     bindBarChart('month',aliash);
@@ -593,6 +574,16 @@
                     bindHeatMap(aliash);
                     bindSummary(aliash);
                     bindPNLSummary(aliash);
+                }
+
+                function bindPNLManu() {
+                    $.getJSON(`${domainName}pnl/getAccountSummary.json?v=${timeSpam}`, function (result) {
+                        if (result.length > 0) {
+                            for (var i = 0; i < result.length; i++) {
+                                $("#manu_ui").append(`<li class="nav-item dropdown"><a class="nav-link link-600 fw-medium" href="Details.html?user=${result[i].name.replace('account', 'user')}" role="button">${result[i].name.replace('account', 'User')}</a></li>`);
+                            }
+                        }
+                    });
                 }
 
                 $this.init = function () {
