--- a/Details.html
+++ b/Details.html
@@ -623,7 +623,7 @@
                             if (userInfo.length > 0) {
                                 $("#user_profile_img").attr("src", userInfo[0].profilepic);
                                 $("#twiter_url").attr("href", userInfo[0].twitterurl);
-                                $(".user_name").html(userInfo[0].userid);
+                                $(".user_name").html(userInfo[0].username);
                             } else {
                                 $(".hide_user_Info").hide();
                             }
