--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
                               </div>
                             </a></td>`;
                                     } else {
-                                        $html += `<a href="Details.html?user=${result[i].name}">${userInfo[0].username}</a>`;
+                                        $html += `<tr><td class="align-middle white-space-nowrap"><a href="Details.html?user=${result[i].name}">${result[i].name}</a></td>`;
                                     }
 
                                     $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif"  data-countup='${JSON.stringify(result[i].realisedpnl).replace('endvalue', 'endValue')}'> </div></td>`;
                                     $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif" style="color:#000;" data-countup='${JSON.stringify(result[i].chargestaxes).replace('endvalue', 'endValue')}'> </div></td>`;
                                     $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif" style="color:${result[i].netrealisedpnl.actualvalue > 0 ? '#10b983' : result[i].netrealisedpnl.actualvalue < 0 ? '#f35631' : '#000'};" data-countup='${JSON.stringify(result[i].netrealisedpnl).replace('endvalue', 'endValue')}'> </div></td>`;
-                                    if (userInfoArr.length > 0) {
+                                    if (userInfo.length > 0) {
 
 
                                         $html += `<td><a target="_blank" href="${userInfo[0].twitterurl}"> <span class="fab fa-twitter"></span></a> <a target="_blank" href="Details.html?user=${result[i].name}"> <span class="far fa-eye"></span></a></td></tr>`;
